--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -20,6 +20,16 @@
         <a href="/" class="brand-logo">
           Discuss
         </a>
+        <ul class="right">
+          <%= if @conn.assigns[:user] do %>
+            <li>
+              <%= link "Sign out", to: auth_path(@conn, :signout) %>
+            </li>
+          <% else %>
+            <li>
+              <%= link "Sign in with Github", to: auth_path(@conn, :request, "github") %>
+          <% end %>
+        </ul>
       </div>
     </nav>
     <div class="container">
